--- a/index.html
+++ b/index.html
@@ -7,64 +7,92 @@
     <title>Резюме</title>
     <meta name="keywords" content="resume, cv, kristina">
     <meta name="description" content="Это сайт - резюме Кристины">
+    <link rel="stylesheet" href="01_selectors.css">
+    <style>
+        * {
+            margin: 0px;
+            padding: 0px
+        }
+    </style>
 </head>
 <body>
-    <img src="imgHTML.jpg" alt="Моя фотография" width="200">
-    <h1>Кристина</h1>
-    <p>Я обучаюсь на <strong>HTML, CSS, JavaScript</strong></p>
-    <p>Я люблю <em>путешествовать, занималься спортом и программировать</em></p>
-    <a href="https://t.me/kristek1104" target="_blank">Telegram</a>
-    |
-    <a href="#" target="_blank">Instagram</a>
-    |
-    <a href="#" target="_blank">ВКонтакте</a>
-    <h2>Мои хобби</h2>
-    <ul>
-        <li>Горные лыжи</li>
-        <li>Рисование</li>
-        <li>Бег</li>
-    </ul>
-
-    <h2>Опыт работы</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Название</th>
-                <th>Должность</th>
-                <th>Год</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr>
-                <td>ООО "Фурор"</td>
-                <td>Дизайнер</td>
-                <td>2019</td>
-            </tr>
-            <tr>
-                <td>ПАО "ИЛ"</td>
-                <td>Инженер</td>
-                <td>2020</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <h2>Связаться со мной</h2>
-    <form>
-        <div>
-            <label for="text">Введите имя:</label>
-            <input type="text" id="text" placeholder="Введите имя">
+    <div class="container">
+            <div class="info">
+                <img src="imgHTML.jpg" alt="Моя фотография" class="avatar">
+                <div class="info-text">
+                    <h1>Кристина</h1>
+                    <p>Я обучаюсь на <strong>HTML, CSS, JavaScript</strong></p>
+                    <p>Я люблю <em>путешествовать, заниматься спортом и программировать</em></p>
+                    <div class="links">
+                        <a href="https://t.me/kristek1104" target="_blank">Telegram</a>
+                        |
+                        <a href="#" target="_blank">Instagram</a>
+                        |
+                        <a href="#" target="_blank">ВКонтакте</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <h2>Мои хобби</h2>
+                <div class="list">
+                <ul>
+                    <li>Горные лыжи</li>
+                    <li>Рисование</li>
+                    <li>Бег</li>
+                </ul>
+            </div>
         </div>
-        <div>
-            <label for="email">Ваш email:</label>
-            <input type="email" id="email" placeholder="Введите email">
+        
+        <div class="card">
+            <h2>Опыт работы</h2>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Название</th>
+                        <th>Должность</th>
+                        <th>Год</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>ООО "Фурор"</td>
+                        <td>Дизайнер</td>
+                        <td>2019</td>
+                    </tr>
+                    <tr>
+                        <td>ПАО "ИЛ"</td>
+                        <td>Инженер</td>
+                        <td>2020</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-        <div>
-            <label for="message">Ваше сообщение:</label>
+
+        <div class="back">
+
+        <form class="form">
+            <h2>Связаться со мной</h2>
             <br>
-            <textarea id="message" cols="20" rows="5" placeholder="Введите сообщение..."></textarea>
-        </div>
-        <button type="submit">Отправить!</button>
-    </form>
+            <div class="nameEmail">
+                <div class="form-group">
+                    <label for="text">Введите имя:</label>
+                    <input type="text" id="text" placeholder="Введите имя">
+                </div>
+                <div class="form-group">
+                    <label for="email">Ваш email:</label>
+                    <input type="email" id="email" placeholder="Введите email">
+                </div>
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="message">Ваше сообщение:</label>
+                <br>
+                <textarea id="message" cols="30" rows="5" placeholder="Введите сообщение..."></textarea>
+            </div>
+            <button type="submit" class="btn">Отправить!</button>
+        </form>
+</div>
+</div>
 </body>
 </html>
